# CEG

./: .gitignore  README.md  pyproject.toml
configs/: baseline_command_templates.json  baseline_registry.yaml  ceg_method_contract.yaml  external_detection_command_templates.json  external_image_generation_command_templates.json  external_metric_command_templates.json  formal_run_specs.json  paper_experiment_matrix.json  paper_main_full.yaml  paper_main_pilot.yaml  paper_main_probe.yaml  paper_mechanism_geo_search.yaml  paper_mechanism_pilot.yaml  paper_mechanism_quickcheck.yaml  paper_output_requirements.json  paper_workflow_notebook_contract.json  pilot_input_manifest_template.json
docs/: artifact_rebuild.md  extraction_profiles.md  field_registry.md  naming_governance.md  release_boundary.md
experiments/: baseline_command_adapter.py  baseline_file_adapter.py  baseline_pilot_producer.py  baseline_plan.py  ceg_detection_producer.py  ceg_real_detection_backend.py  command_templates.py  detection_event_thresholds.py  detection_plan.py  drive_result_inventory.py  experiment_coverage.py  experiment_matrix.py  external_result_evidence.py  formal_run_spec.py  image_generation_backend.py  image_generation_plan.py  metric_file_adapter.py  metric_plan.py  paper_fixture_factory.py  pilot_attack_output_acceptance.py  pilot_baseline_output_acceptance.py  pilot_detection_output_acceptance.py  pilot_execution_readiness.py  pilot_fixed_fpr_output_acceptance.py  pilot_image_generation_backend_command.py  pilot_image_generation_launch_plan.py  pilot_input_gap.py  (+22 more)
(+269 files in other folders)
